@@ -1,6 +1,7 @@
 v8.1
 -----
 + Added support for INR, TWD, HKD, SAR, ZAR, AED, CHF, CLP, PEN, COP, and CNY currencies
++ Added the Performance Survey section to the "Customize" button on app pages
 : Updated regional price comparison feature to be more efficient and to work with new currencies
 : Fixed a layout issue with profile page links when using responsive design
 : Fixed an issue where Early Access banners would incorrectly show on achievement showcases
